<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/notifications"
        android:orderInCategory="1"
        android:title="@string/Notifications"/>

    <item
        android:id="@+id/menu_report_address"
        android:icon="@drawable/report_address"
        android:orderInCategory="1"
        android:title="@string/reportAddress"/>

    <item
        android:id="@+id/notifications_settings"
        android:icon="@drawable/notifications_settings"
        android:orderInCategory="1"
        android:title="@string/notifications"/>

    <item
        android:id="@+id/addFriend"
        android:icon="@drawable/add_friend"
        android:orderInCategory="1"
        android:title="@string/addFriend"/>
    <item
        android:id="@+id/menu_report"
        android:icon="@drawable/ic_report"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/publish"/>

    <item
        android:id="@+id/menu_mylocation"
        android:icon="@drawable/ic_mylocation"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/menuCurrentLoction"/>


</menu>
